Compiling collages